[TASK] More stuff

--- a/Ressources/Private/index.html
+++ b/Ressources/Private/index.html
@@ -11,8 +11,9 @@
 
 <body>
 
-    <img class="background-right" src="../img/bg_objekt_oben_rechts.svg" alt="background">
+    <img class="background-right-top" src="../img/bg_objekt_oben_rechts.svg" alt="background">
     <img class="background-left" src="../img/bg_objekt_links.svg" alt="background">
+    <img class="background-right" src="../img/bg_objekt_rechts.svg" alt="background">
     <img class="background-left-bottom" src="../img/bg_objekt_unten_links.svg" alt="background">
 
     <div class="nav-container">
@@ -95,33 +96,17 @@
                 Obcaecati tenetur ipsam mollitia minus.</p>
         </div>
     </div>
-
-
-    <div class="header-image-container">
-        <img src="../img/teaser/6.jpg" alt="" class="header-image">
-    </div>
     <div class="content-wrapper">
         <main>
-
-
-            <div class="header-text">
-                <h2>Wir zeigen die Kraft der Zeitungen</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti commodi amet enim molestiae sed
-                    labore sit, esse suscipit, obcaecati quidem molestias facilis repudiandae sequi doloremque
-                    praesentium qui ea nemo. Illo tenetur reprehenderit sunt id consectetur ex nostrum soluta
-                    repudiandae laudantium libero officiis nam, aspernatur maiores minima sequi! Quos quia at, optio, ab
-                    quisquam mollitia similique placeat aliquam enim quae aliquid asperiores expedita labore
-                    perspiciatis nihil sint, magnam sapiente excepturi non!</p>
-            </div>
-
-            <div class="news-container">
+            <!--article-->
+            <div class="article-container">
                 <h1>News</h1>
-                <div class="news-slider">
-                    <div class="news-slide">
+                <div class="article-slider">
+                    <div class="article-slide">
                         <img src="../img/teaser/2.png" alt="second-teaser">
-                        <div class="news-content">
-                            <p class="news-date">18.03.2021</p>
-                            <h2 class="news-title">Überschrift</h2>
+                        <div class="article-content">
+                            <p class="article-date">18.03.2021</p>
+                            <h2 class="article-title">Überschrift</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
@@ -130,11 +115,11 @@
                         </div>
                     </div>
 
-                    <div class="news-slide">
+                    <div class="article-slide">
                         <img src="../img/teaser/4.png" alt="second-teaser">
-                        <div class="news-content">
-                            <p class="news-date">16.01.2020</p>
-                            <h2 class="news-title">Überschrift</h2>
+                        <div class="article-content">
+                            <p class="article-date">16.01.2020</p>
+                            <h2 class="article-title">Überschrift</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
@@ -143,11 +128,11 @@
                         </div>
                     </div>
 
-                    <div class="news-slide">
+                    <div class="article-slide">
                         <img src="../img/teaser/1.png" alt="second-teaser">
-                        <div class="news-content">
-                            <p class="news-date">04.03.2021</p>
-                            <h2 class="news-title">Überschrift</h2>
+                        <div class="article-content">
+                            <p class="article-date">04.03.2021</p>
+                            <h2 class="article-title">Überschrift</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
@@ -156,53 +141,193 @@
                         </div>
                     </div>
                 </div>
-                <a href=""></a>
+                <a class="article-button" href="">Alle News</a>
+            </div>
+            <!--Studien-->
+            <div class="article-container">
+                <h1>Studien</h1>
+                <div class="article-slider">
+                    <div class="article-slide">
+                        <img src="../img/teaser/2.png" alt="second-teaser">
+                        <div class="article-content">
+                            <p class="article-date">18.03.2021</p>
+                            <h2 class="article-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+
+                    <div class="article-slide">
+                        <img src="../img/teaser/4.png" alt="second-teaser">
+                        <div class="article-content">
+                            <p class="article-date">16.01.2020</p>
+                            <h2 class="article-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+
+                    <div class="article-slide">
+                        <img src="../img/teaser/1.png" alt="second-teaser">
+                        <div class="article-content">
+                            <p class="article-date">04.03.2021</p>
+                            <h2 class="article-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+                </div>
+                <a class="article-button" href="">Alle Studien</a>
             </div>
 
-            
-            <h1>Studien</h1>
-            <div class="teaser-container">
-                <div class="teaser">
-                    <img src="../img/teaser/7.png" alt="first-teaser">
-                    <div class="teaser-content">
-                        <h2 class="teaser-title">Auflagen der Zeitungen</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias, enim,
-                            ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.</p>
-                        <a href="secondsub.html">Mehr</a>
+            <!--Services-->
+            <div class="services-container">
+                <h1>Services</h1>
+                <div class="services-slider">
+                    <div class="services-slide">
+                        <img src="../img/teaser/7.png" alt="services-image">
+                        <div class="services-content">
+                            <h2 class="services-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+
+                    <div class="services-slide">
+                        <img class="static" src="../img/teaser/default.png" alt="services-image">
+                        <img class="active-gif" src="../img/teaser/hover.gif" alt="services-hover-gif">
+                        <div class="services-content">
+                            <h2 class="services-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+
+                    <div class="services-slide">
+                        <img src="../img/teaser/8.png" alt="services-image">
+                        <div class="services-content">
+                            <h2 class="services-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
                     </div>
                 </div>
-                <div class="teaser">
-                    <img src="../img/teaser/8.png" alt="second-teaser">
-                    <div class="teaser-content">
-                        <h2 class="teaser-title">Media-Beratung</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias, enim,
-                            ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.</p>
-                        <a href="secondsub.html">Mehr</a>
+                <!--ROW2-->
+                <div class="services-slider">
+                    <div class="services-slide">
+                        <img src="../img/teaser/7.png" alt="services-image">
+                        <div class="services-content">
+                            <h2 class="services-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+
+                    <div class="services-slide">
+                        <img class="static" src="../img/teaser/default.png" alt="services-image">
+                        <img class="active-gif" src="../img/teaser/hover.gif" alt="services-hover-gif">
+                        <div class="services-content">
+                            <h2 class="services-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+
+                    <div class="services-slide">
+                        <img src="../img/teaser/8.png" alt="services-image">
+                        <div class="services-content">
+                            <h2 class="services-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
                     </div>
                 </div>
-                <div class="teaser">
-                    <img src="../img/teaser/9.png" alt="third-teaser">
-                    <div class="teaser-content">
-                        <h2 class="teaser-title">Gremien</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias, enim,
-                            ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.</p>
-                        <a href="secondsub.html">Mehr</a>
-                    </div>
-                </div>
-            </div>
-            <div class="content-element-1">
-                <h2 class="image-title">Bildüberschrift</h2>
-                <img src="../img/teaser/6.jpg" alt="cover">
-                <h2>Überschrift</h2>
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem repellendus iure cupiditate?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas laudantium iusto, deleniti velit
-                    veritatis ea beatae inventore ab recusandae ullam ut error repellat officia ad. Ipsum fugiat quasi
-                    in aut? Reprehenderit minima labore ratione hic eos dolorum iste animi saepe sed natus deserunt
-                    dignissimos at accusamus error fugiat, nihil ex. Iste pariatur, dolorum et beatae, facilis numquam
-                    fugit veritatis hic cumque, quisquam quo ullam earum.</p>
-                <a href="secondsub.html">Mehr</a>
             </div>
 
+            <!--Tools-->
+            <div class="services-container">
+                <h1>Tools</h1>
+                <div class="services-slider">
+                    <div class="services-slide">
+                        <img src="../img/teaser/7.png" alt="services-image">
+                        <div class="services-content">
+                            <h2 class="services-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+
+                    <div class="services-slide">
+                        <img class="static" src="../img/teaser/default.png" alt="services-image">
+                        <img class="active-gif" src="../img/teaser/hover.gif" alt="services-hover-gif">
+                        <div class="services-content">
+                            <h2 class="services-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+
+                    <div class="services-slide">
+                        <img src="../img/teaser/8.png" alt="services-image">
+                        <div class="services-content">
+                            <h2 class="services-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="content-element-1">
+                    <h1 class="image-title">Bildüberschrift</h1>
+                    <img src="../img/teaser/6.jpg" alt="cover">
+                    <div class="content-text">
+                        <h2>Überschrift</h2>
+                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem repellendus iure cupiditate?</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas laudantium iusto, deleniti velit
+                            veritatis ea beatae inventore ab recusandae ullam ut error repellat officia ad. Ipsum fugiat quasi
+                            in aut? Reprehenderit minima labore ratione hic eos dolorum iste animi saepe sed natus deserunt
+                            dignissimos at accusamus error fugiat, nihil ex. Iste pariatur, dolorum et beatae, facilis numquam
+                            fugit veritatis hic cumque, quisquam quo ullam earum.</p>
+                        <a href="secondsub.html">Mehr</a>
+                    </div>
+                </div>
 
         </main>
 
@@ -210,14 +335,7 @@
     <!--Wrapper closing-->
 
     <div class="footer-container">
-        <div class="footer">
-            <ul>
-                <li><a href="secondsub.html">Impressum</a></li>
-                <li><a href="secondsub.html">Datenschutz</a></li>
-                <li><a href="secondsub.html">Jobs</a></li>
-                <li><a href="secondsub.html">Anmelden</a></li>
-            </ul>
-        </div>
+        <img src="../img/teaser/footer.png" alt="">
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
