--- a/Ressources/Private/secondsub.html
+++ b/Ressources/Private/secondsub.html
@@ -159,14 +159,7 @@
     </div> <!--Wrapper closing-->
 
     <div class="footer-container">
-        <div class="footer">
-            <ul>
-                <li><a href="sub.html">Impressum</a></li>
-                <li><a href="sub.html">Datenschutz</a></li>
-                <li><a href="sub.html">Jobs</a></li>
-                <li><a href="sub.html">Anmelden</a></li>
-            </ul>
-        </div>
+        <img src="../img/teaser/footer.png" alt="">
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
