--- a/Ressources/Private/sub.html
+++ b/Ressources/Private/sub.html
@@ -130,14 +130,7 @@
     <!--Wrapper closing-->
 
     <div class="footer-container">
-        <div class="footer">
-            <ul>
-                <li><a href="index.html">Impressum</a></li>
-                <li><a href="index.html">Datenschutz</a></li>
-                <li><a href="index.html">Jobs</a></li>
-                <li><a href="index.html">Anmelden</a></li>
-            </ul>
-        </div>
+        <img src="../img/teaser/footer.png" alt="">
     </div>
 
 
